@@ -1,5 +1,10 @@
 2009-01-29  Stefan Kost  <ensonic@users.sf.net>
 
+	* tests/tools.sh:
+	  Remove, this is generated.
+
+2009-01-29  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	  Automatically creating ulinks for urls.
 
